[gd_scene load_steps=25 format=3 uid="uid://cr71ho5tuj7bn"]

[ext_resource type="Script" path="res://entities/encounters/enemy.gd" id="1_111lc"]
[ext_resource type="Script" path="res://entities/encounters/damage_text.gd" id="2_08q20"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="3_dkh0j"]
[ext_resource type="Script" path="res://entities/encounters/healthbar.gd" id="4_f1fe7"]
[ext_resource type="Texture2D" uid="uid://cysaqjkew76fv" path="res://assets/battle/enemy_sprites/boneco_treino.png" id="5_u155m"]
[ext_resource type="Script" path="res://entities/encounters/enemy_sprite.gd" id="6_ormgc"]
[ext_resource type="AudioStream" uid="uid://bxv8cyux61nvh" path="res://assets/sounds/hit.wav" id="7_8tmj0"]
[ext_resource type="AudioStream" uid="uid://v5g5pt1bp1s6" path="res://assets/sounds/enemy_death.wav" id="8_jdwkq"]
[ext_resource type="AudioStream" uid="uid://b5l6brydh16eh" path="res://assets/sounds/damage_taken_01.wav" id="9_nmeaa"]

[sub_resource type="LabelSettings" id="LabelSettings_eubrh"]
line_spacing = 60.0
font = ExtResource("3_dkh0j")
font_size = 320
outline_size = 100
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekjph"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 2
expand_margin_left = 11.0
expand_margin_top = 5.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffaj6"]
content_margin_left = 112.0
content_margin_right = 112.0
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
border_width_left = 32
border_width_top = 32
border_width_right = 32
corner_radius_top_left = 75
corner_radius_top_right = 75
expand_margin_left = 8.0
expand_margin_top = 5.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8p0lq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 10

[sub_resource type="GDScript" id="GDScript_6ekau"]
script/source = "extends TabContainer


# Called when the node enters the scene tree for the first time.
func _ready():
	set_tab_disabled(0, true)
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avsf2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 12
border_width_top = 19
border_width_right = 12
border_width_bottom = 12
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_so53v"]
bg_color = Color(0.690469, 0, 0.0824977, 1)
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qq60v"]
bg_color = Color(1.29953e-06, 0.562021, 0.122384, 1)
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wi7r6"]

[sub_resource type="Animation" id="Animation_nr8us"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kk0q7"]
resource_name = "damage_number"

[sub_resource type="Animation" id="Animation_kqvds"]
resource_name = "death"
length = 0.8
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_8tmj0")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_jdwkq")
}],
"times": PackedFloat32Array(0.0562, 0.1)
}
tracks/0/use_blend = true
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.823529, 0.298039, 1, 1), Color(0.823529, 0.298039, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6ykin"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7lblk"]
resource_name = "get_hit"
length = 0.8
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_8tmj0")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_nmeaa")
}],
"times": PackedFloat32Array(0, 0.0467)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(5.8956e-05, 2.15792e-05, 0.00306478, 1.2394e-05, 4.78872e-05),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uup1h"]
_data = {
"RESET": SubResource("Animation_nr8us"),
"damage_number": SubResource("Animation_kk0q7"),
"death": SubResource("Animation_kqvds"),
"default": SubResource("Animation_6ykin"),
"get_hit": SubResource("Animation_7lblk")
}

[node name="Enemy" type="Node2D"]
script = ExtResource("1_111lc")

[node name="DamageText" type="Node2D" parent="."]
visible = false
position = Vector2(-42, -15)
scale = Vector2(0.04, 0.04)
script = ExtResource("2_08q20")

[node name="Label" type="Label" parent="DamageText"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 600.0
offset_top = 1275.0
offset_right = 1304.0
offset_bottom = 1596.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "9545"
label_settings = SubResource("LabelSettings_eubrh")
horizontal_alignment = 1

[node name="Healthbar" type="Node2D" parent="."]
visible = false
z_index = 2
position = Vector2(40, 16)
scale = Vector2(0.7, 0.7)
script = ExtResource("4_f1fe7")

[node name="TabBar" type="TabContainer" parent="Healthbar"]
offset_left = -42.0
offset_top = -15.0
offset_right = 2108.0
offset_bottom = 460.0
scale = Vector2(0.04, 0.04)
theme_override_fonts/font = ExtResource("3_dkh0j")
theme_override_font_sizes/font_size = 243
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_ekjph")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_ffaj6")
theme_override_styles/panel = SubResource("StyleBoxFlat_8p0lq")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_ffaj6")
current_tab = 0
script = SubResource("GDScript_6ekau")

[node name="Enemy_Name" type="PanelContainer" parent="Healthbar/TabBar"]
layout_direction = 2
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_avsf2")
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Healthbar"]
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -3.0
offset_right = 1007.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0814959, 0.0932724)
theme_override_constants/separation = -1

[node name="ProgressBar" type="ProgressBar" parent="Healthbar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_so53v")
theme_override_styles/fill = SubResource("StyleBoxFlat_qq60v")
value = 100.0
rounded = true
show_percentage = false

[node name="EnemyHp" type="Label" parent="Healthbar/HBoxContainer/ProgressBar"]
layout_mode = 0
offset_right = 1041.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("3_dkh0j")
theme_override_font_sizes/font_size = 62
text = "12/12"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 33)
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_u155m")
script = ExtResource("6_ormgc")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("RectangleShape2D_wi7r6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uup1h")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
